--- a/index.ipynb
+++ b/index.ipynb
@@ -65,11 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; import sqlite, create a connection and then a cursor object."
+    "import sqlite3 \n",
+    "connection = sqlite3.connect('dogs.db')\n",
+    "cur = connection.cursor()"
    ]
   },
   {
@@ -120,11 +122,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Little Ann', 'coonhound'),\n",
+       " ('Pickles', 'black lab'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "cur.execute('''\n",
+    "SELECT name, breed FROM dogs WHERE gender = 'F'\n",
+    "''').fetchall()"
    ]
   },
   {
@@ -136,11 +154,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None,),\n",
+       " ('Clifford',),\n",
+       " ('Lassie',),\n",
+       " ('Little Ann',),\n",
+       " ('McGruff',),\n",
+       " ('Pickles',),\n",
+       " ('Scooby',),\n",
+       " ('Snoopy',),\n",
+       " ('Snowy',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "cur.execute('''\n",
+    "SELECT name FROM dogs ORDER BY name\n",
+    "''').fetchall()"
    ]
   },
   {
@@ -152,11 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "cur.execute('''\n",
+    "SELECT * FROM dogs WHERE name is NULL\n",
+    "''').fetchall()"
    ]
   },
   {
@@ -168,11 +220,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Snoopy', 'beagle'),\n",
+       " ('Clifford', 'big red'),\n",
+       " (None, 'golden retriever'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Pickles', 'black lab')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "cur.execute('''\n",
+    "SELECT name, breed FROM dogs WHERE hungry = 1 ORDER BY age\n",
+    "''').fetchall()"
    ]
   },
   {
@@ -184,11 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Pickles', 13, 'mischievous')]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "cur.execute('''\n",
+    "SELECT name, age, temperament FROM dogs ORDER BY age DESC LIMIT 1\n",
+    "''').fetchall()"
    ]
   },
   {
@@ -200,11 +283,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Snoopy', 3, 'M', 'beagle', 'friendly', 1),\n",
+       " (6, 'Clifford', 4, 'M', 'big red', 'smiley', 1),\n",
+       " (9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "cur.execute('''\n",
+    "SELECT * FROM dogs ORDER BY age LIMIT 3\n",
+    "''').fetchall()"
    ]
   },
   {
@@ -216,11 +314,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('McGruff', 'bloodhound'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Little Ann', 'coonhound'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "cur.execute('''\n",
+    "SELECT name, breed FROM dogs WHERE age BETWEEN 5 AND 10\n",
+    "''').fetchall()"
    ]
   },
   {
@@ -232,11 +347,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 4, 1),\n",
+       " ('Clifford', 4, 1),\n",
+       " ('Lassie', 7, 1),\n",
+       " ('Scooby', 6, 1),\n",
+       " ('Snoopy', 3, 1)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "cur.execute('''\n",
+    "SELECT name, age, hungry FROM dogs WHERE (age BETWEEN 2 AND 7) & (hungry = 1) ORDER BY name\n",
+    "''').fetchall()"
    ]
   },
   {
@@ -256,9 +388,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -270,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
